--- a/1-webapp-jogoteca/templates/login.html
+++ b/1-webapp-jogoteca/templates/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
     <title>Jogoteca</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
   </head>
   <body>
     <div class="container">
@@ -19,13 +19,12 @@
             {% endif %}
         {% endwith %}
 
-        <div class="page-header">
-            <h1>{{ titulo }}</h1>
-        </div>
-
-        {% block conteudo %}
-        {% endblock %}
-
+        <h1>Faça seu login</h1>
+        <form method="POST" action="/autenticar">
+            <p><label>Nome de usuário:</label> <input class="form-control" type="text" name="usuario" required></p>
+            <p><label>Senha:</label> <input class="form-control" type="password" name="senha" required></p>
+            <p><button class="btn btn-primary" type="submit">Entrar</button></p>
+        </form>
     </div>
-  </body>
+</body>
 </html>
