adicionando autoriazação para usuários

--- a/1-webapp-jogoteca/templates/novo.html
+++ b/1-webapp-jogoteca/templates/novo.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %}
 {% block conteudo %}
-      <form action="/cadastrar" method="POST">
+      <form action="{{ url_for('cadastrar') }}" method="POST">
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome</label>
